--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3>
 <a id="welcome-to-peris-lair" class="anchor" href="#welcome-to-peris-lair" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Peri's lair.</h3>
 
-<p><a href="http://lcmp.github.io">LCMP</a></p>
+<p><img src="https://travis-ci.org/PerikiyoXD/openrw.svg?branch=master"></p>
       </section>
     </div>
     <footer>
