--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
 <html>
-  <head>
-    <title>PerikiyoXD&#39;s Place by PerikiyoXD</title>
-  </head>
-  <body>
-    <span>Master status:</span>
-    <img src="https://travis-ci.org/PerikiyoXD/openrw.svg?branch=master" />
-    <br/>
-    <span>UI-Overhau branch status:</span>
-    <img src="https://travis-ci.org/PerikiyoXD/openrw.svg?branch=ui-overhaul" />
-  </body>
+   <head>
+      <title>PerikiyoXD&#39;s Place by PerikiyoXD</title>
+      <style>
+         table, td, th {
+         border: 1px solid #ddd;
+         text-align: left;
+         }
+         table {
+         border-collapse: collapse;
+         width: 100%;
+         }
+         th, td {
+         padding: 15px;
+         }
+      </style>
+   </head>
+   <body>
+      <table>
+         <tr>
+            <th>Project</th>
+            <th>Branch</th>
+            <th>Status</th>
+         </tr>
+         <tr>
+            <td>perikiyoxd/openrw</td>
+            <td>master</td>
+            <td><img src="https://travis-ci.org/PerikiyoXD/openrw.svg?branch=master" /></td>
+         </tr>
+         <tr>
+            <td>perikiyoxd/openrw</td>
+            <td>ui-overhaul</td>
+            <td><img src="https://travis-ci.org/PerikiyoXD/openrw.svg?branch=ui-overhaul" /></td>
+         </tr>
+      </table>
+   </body>
 </html>
